--- a/HTML/test.html
+++ b/HTML/test.html
@@ -160,5 +160,14 @@
         </ul>
       </div>
     </div>
+    <div>
+      <h2>创建下载链接</h2>
+      <a href="https://dl.360safe.com/360safe_cq.exe" target="_blank">360</a>
+      <a
+        href="https://developer.mozilla.org/zh-CN/docs/conflicting/Web/API/Worker/message_event"
+        download
+        >mdn</a
+      >
+    </div>
   </body>
 </html>
