--- a/CSS/test.html
+++ b/CSS/test.html
@@ -30,6 +30,17 @@
         background-color: red;
       }
     </style>
+    <style>
+      #div1 {
+        /* display: inline-block; */
+        background-color: red;
+        margin-bottom: 10px;
+      }
+      #div2 {
+        background-color: green;
+        margin-top: 20px;
+      }
+    </style>
   </head>
   <body>
     <div>
@@ -46,5 +57,10 @@
       <div>flex布局</div>
     </div>
     <hr />
+    <div id="wbkzd">
+      <h2>外边框折叠</h2>
+      <div id="div1">11111</div>
+      <div id="div2">11111</div>
+    </div>
   </body>
 </html>
