--- a/CSS/wings.html
+++ b/CSS/wings.html
@@ -1,12 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>双飞翼布局</title>
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+    }
+    .header,
+    .footer {
+      height: 100px;
+      background-color: skyblue;
+    }
+    .container {
+      overflow: hidden;
+    }
+    .left,
+    .middle,
+    .right {
+      float: left;
+      min-height: 130px;
+    }
+    .left {
+      margin-left: -100%;
+      width: 200px;
+      background-color: red;
+    }
+    .right {
+      margin-left: -220px;
+      width: 220px;
+      background-color: green;
+    }
+    .middle {
+      width: 100%;
+      height: 100%;
+      background-color: blue;
+    }
+    .inner {
+      margin: 0 220px 0 200px;
+      min-height: 130px;
+    }
+  </style>
 </head>
-<body>
-  
+<div class="header">header</div>
+<div class="container">
+  <div class="middle">
+    <div class="inner">
+      center
+    </div>
+  </div>
+  <div class="left">
+    left
+  </div>
+  <div class="right">
+    right
+  </div>
+</div>
+<div class="footer">footer</div>
 </body>
+
 </html>
