--- a/CSS/learnCSS/02-css-base.html
+++ b/CSS/learnCSS/02-css-base.html
@@ -41,6 +41,63 @@
         border: 1px solid #cccccc;
         background: #eeeeee;
       }
+      #color-test {
+        /* background-color: red; */
+        /* 色相 饱和度 亮度 */
+        background-color: hsl(66, 50%, 50%);
+        /* rgb */
+        width: 300px;
+        height: 300px;
+      }
+      /* #bgc{
+        background: url();
+      } */
+      #gradient {
+        height: 300px;
+        width: 300px;
+        /* background:linear-gradient(to right,red,green);; */
+        /* background: linear-gradient(45deg,red,green); */
+        /* background: linear-gradient(45deg,red 10%,yellow 30%,red 70%, green 100%); */
+        background: linear-gradient(
+            45deg,
+            transparent 0,
+            transparent 49.5%,
+            green 49.5%,
+            green 50.5%,
+            transparent 50.5%,
+            transparent 100%
+          ),
+          linear-gradient(
+            135deg,
+            transparent 0,
+            transparent 49.5%,
+            red 49.5%,
+            red 50.5%,
+            transparent 50.5%,
+            transparent 100%
+          );
+        background-size: 30px 30px;
+        background-repeat: repeat;
+      }
+      #sprite {
+        width: 46px;
+        height: 46px;
+        background: url(./img/sprite.webp);
+        background-position: -10px -125px;
+        /* 如果背景图尺寸缩小，相应偏移量也需要缩小 */
+        /* 两倍图三倍图原理 */
+        /* background-size: 46px 46px; */
+        background-repeat: no-repeat;
+      }
+      #border-test{
+        width: 200px;
+        height: 200px;
+        /* 利用边框实现圆角 */
+        border-top: 10px solid red;
+        border-right: 10px solid greenyellow;
+        border-bottom: 10px solid red;
+        border-left: 10px solid greenyellow;
+      }
     </style>
   </head>
   <body>
@@ -52,5 +109,11 @@
     </div>
     <div class="test1">测试1</div>
     <div class="test2">测试2</div>
+    <div id="color-test">color</div>
+    <div id="bgc">背景图片</div>
+    <div id="gradient">渐变</div>
+    <div id="sprite">雪碧图</div>
+    <div id="border-test">边框</div>
+    <div>CSS hack</div>
   </body>
 </html>
