--- a/CSS/learnCSS/03-css-布局.html
+++ b/CSS/learnCSS/03-css-布局.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>表格布局</title>
+    <title>布局</title>
     <style>
       #table1 {
         width: 300px;
@@ -18,6 +18,32 @@
       #table1 td:nth-child(2) {
         background-color: greenyellow;
       }
+      .flex {
+        display: flex;
+        width: 600px;
+        height: 200px;
+        border: 3px solid green;
+      }
+      .f1 {
+        flex: 1;
+        background-color: red;
+        margin: 5px;
+      }
+      .flex div:nth-child(2) {
+        flex: 300px;
+      }
+      #flexbox {
+        display: flex;
+        flex-direction: row-reverse;
+        width: 200px;
+        height: 50px;
+      }
+      #flexbox div {
+        flex: 1;
+        border: 3px solid green;
+        margin: 5px;
+        background-color: yellow;
+      }
     </style>
   </head>
   <body>
@@ -29,6 +55,16 @@
           <td id="td2">RIGHT</td>
         </tr>
       </table>
+    </div>
+    <div class="flex">
+      <div class="f1">1</div>
+      <div class="f1">2</div>
+      <div class="f1">3</div>
+    </div>
+    <div id="flexbox">
+      <div class="fb1">1</div>
+      <div class="fb2">2</div>
+      <div class="fb3">3</div>
     </div>
   </body>
 </html>
