--- a/CSS/learnCSS/03-css-布局.html
+++ b/CSS/learnCSS/03-css-布局.html
@@ -44,6 +44,15 @@
         margin: 5px;
         background-color: yellow;
       }
+      .float {
+        overflow: auto;
+      }
+      .fl {
+        float: left;
+        width: 200px;
+        height: 200px;
+        background-color: red;
+      }
     </style>
   </head>
   <body>
@@ -66,5 +75,10 @@
       <div class="fb2">2</div>
       <div class="fb3">3</div>
     </div>
+    <div class="float">
+      <div class="fl"></div>
+      <div class="fl"></div>
+    </div>
+    <div class="next">next</div>
   </body>
 </html>
