--- a/CSS/learnCSS/08-bootstrap/index.html
+++ b/CSS/learnCSS/08-bootstrap/index.html
@@ -18,13 +18,12 @@
   </head>
   <body>
     <div>
-      <form action="">
-        <div>name:<input type="text" /></div>
-        <div>p w d :<input type="text" /></div>
-        <div>
-          <input type="button" value="submit" />
-          <div>密码空</div>
-        </div>
+      <form action="http://www.baidu.com">
+        name:<input type="text" />
+        <hr />
+        pwd :<input type="text" />
+        <hr />
+        <button type="submit" value="submit">submit</button>
       </form>
     </div>
     <script>
