--- a/js/调试代码/21-获取li的索引.html
+++ b/js/调试代码/21-获取li的索引.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>DOM监听是异步的</title>
   </head>
   <body>
     <ul>
@@ -12,32 +12,6 @@
       <li>2</li>
       <li>3</li>
     </ul>
-    <script>
-      const liEls = document.querySelectorAll("li");
-
-      // let方法
-      // for (let i = 0; i < liEls.length; i++) {
-      //   liEls[i].onclick = () => {
-      //     alert(`click${i + 1}li`);
-      //   };
-      // }
-
-      // 单独的参数保存i
-      // for (var i = 0; i < liEls.length; i++) {
-      //   liEls[i].index = i;
-      //   liEls[i].onclick = function () {
-      //     alert(this.index + 1);
-      //   };
-      // }
-
-      // var + 闭包
-      for (var i = 0; i < liEls.length; i++) {
-        liEls[i].onclick = (function (a) {
-          return function () {
-            alert(a + 1);
-          };
-        })(i);
-      }
-    </script>
+    <script src="./21-getLiIndex.js"></script>
   </body>
 </html>
