--- a/js/2-核心篇-css/03-居中.html
+++ b/js/2-核心篇-css/03-居中.html
@@ -33,5 +33,10 @@
     <div id="inline">居中</div>
     块级元素
     <div id="knowWidth"><div>center</div></div>
+    text-overflow
+    <div style="width: 100px; height: 100px; text-overflow: fade">
+      transition transform animation gradient box-shadow border-radius
+      word-break
+    </div>
   </body>
 </html>
