fix: format HTML

--- a/HTML/test.html
+++ b/HTML/test.html
@@ -8,6 +8,12 @@
   </head>
   <body>
     <div>
+      <h2>转义字符</h2>
+      <div>单引号&acute;</div>
+      <div>双引号&quot;</div>
+      <div>大于号&lt;</div>
+    </div>
+    <div>
       <h2>描述列表-1</h2>
       <dl>
         <dt>版权信息</dt>
