modified:   HTML/HTML.md modified:   HTML/test.html

--- a/HTML/test.html
+++ b/HTML/test.html
@@ -64,10 +64,11 @@
     <div>
       <h2>abbr</h2>
       <abbr title="title">t</abbr>
+      <acronym title="title">title</acronym>
     </div>
     <div>
       <h2>address</h2>
-      <address>北京市，110</address>
+      <address>北京市, 110</address>
     </div>
     <div>
       <h2>标记计算机代码</h2>
@@ -81,6 +82,8 @@
       <kbd>ctrl</kbd>
       <samp> ctrl </samp>
     </div>
+    <!-- 时间 -->
+    time
     <div>
       <h2>副标题</h2>
       <hgroup>
@@ -197,7 +200,7 @@
     </div>
     <div>
       <h2>设置行标题和列标题</h2>
-      <table>
+      <table style="border: dotted">
         <caption>
           表格标题
         </caption>
