选择器&盒模型&布局

--- a/CSS/src/align.html
+++ b/CSS/src/align.html
@@ -5,38 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <!-- <style>
-      #align {
-        position: relative;
-        background-color: red;
-      }
-      #absolute {
-        position: absolute;
-        text-align: center;
-        left: 0;
-        right: 0;
-        width: 100px;
-        margin: 0 auto;
-        background-color: green;
-      }
-    </style> -->
     <style>
-      #height {
-        background-color: green;
-      }
-      #height div {
-        background-color: red;
-        line-height: 100px;
+      div {
+        width: 50px;
+        height: 50px;
+        line-height: 50px;
       }
     </style>
   </head>
   <body>
-    <!-- <div id="align">
-      <div id="absolute">niha</div>
-    </div> -->
-    <div></div>
-    <div id="height">
-      <div>垂直居中</div>
-    </div>
+    <div>111111223rdsgfvf834fvsdhncdhgsdvfdhbf</div>
   </body>
 </html>
