--- a/js/基础/04-defer-async.html
+++ b/js/基础/04-defer-async.html
@@ -16,9 +16,15 @@
       ...content before script......content before script......content before
       script......content before script......content before script...
     </p>
+    
+    <!-- obj obj -->
+    <!-- <script src="./defer.js" defer></script> -->
 
-    def
-    <script src="./defer.js"></script>
+    <!-- obj obj -->
+    <!-- <script src="./defer.js" async></script> -->
+
+    <!-- obj undefined -->
+    <script src="./defer.js"></script> 
 
     <!-- 立即可见 -->
     <p id="test" style="font-size: 30px">...content after script...</p>
