--- a/js/基础/08-pageX-clientX.html
+++ b/js/基础/08-pageX-clientX.html
@@ -12,6 +12,7 @@
       document.querySelector("div").addEventListener("mousemove", (event) => {
         console.log(event.pageX);
         console.log(event.clientX);
+        console.log(event.screenX)
       });
     </script>
   </body>
