--- a/js/代码题/15-图片旋转动画.html
+++ b/js/代码题/15-图片旋转动画.html
@@ -7,8 +7,8 @@
     <title>图片旋转</title>
     <style>
       img {
-        width: 200px;
-        animation: spin 2s linear;
+        width: 500px;
+        animation: spin 2s linear infinite;
       }
       @keyframes spin {
         from {
