--- a/js/代码题/14-HTMLCollections.html
+++ b/js/代码题/14-HTMLCollections.html
@@ -17,6 +17,7 @@
       <input type="text" /><button type="submit">submit</button>
     </form>
     <script>
+      // 返回当前文档中的 <form>元素的一个集合 (一个 HTMLCollection)
       const formEl = document.forms;
       console.log(formEl);
       console.log(formEl[0][0]);
